# cute

./: .gitignore  CMakeLists.txt  README.md
Asm/: CMakeLists.txt  main.cpp
Asm/codegen/: generator.cpp  generator.hpp  instrspec.hpp
Asm/core/: core.hpp
Asm/parser/: meta.hpp  nodes.hpp  parser.cpp
Asm/tokenizer/: stream.cpp  tokenizer.cpp  tokenizer.hpp  tokens.hpp
Asm/utils/: utils.cpp
Assembler/: CMakeLists.txt  main.cpp
Assembler/codegen/: generator.cpp  generator.hpp  instrspec.hpp
Assembler/core/: core.cpp  core.hpp
Assembler/nodes/: nodes.hpp
Assembler/parser/: parser.cpp  parser.hpp
Assembler/resolver/: resolver.cpp  resolver.hpp
Assembler/symbols/: symbols.hpp
Assembler/tokenizer/: stream.cpp  tokenizer.cpp  tokenizer.hpp  tokens.hpp
Assembler/utils/: utils.cpp  utils.hpp
Compiler/analyzer/: name_resolver.cpp  type_checker.cpp
Compiler/node/: node.hpp
Engine/: CMakeLists.txt
Engine/atom/: atom.c
Engine/containers/: container.c  container.h
Engine/core/: engine.c  exec.c
Engine/engine/: context.c  context.h  engine.c  error.h  exec.c  exec.h  failure.h
Engine/image/: image.c
Engine/include/: CuteAtom.h  CuteByte.h  CuteConfig.h  CuteEngine.h  CuteInstr.h
Engine/utils/: utils.c  utils.h
docs/: arch.md  image.md  todo.md
examples/: dynamic_abs.ct
main/: CMakeLists.txt  main.c
